GNOME Bugzilla – Bug 745303
Wayland: Initial setup window is not maximised
Last modified: 2015-03-17 17:51:24 UTC
Created attachment 298117 [details] Screenshot Continuous build 20150227.51: initial setup for new user is not maximised on wayland session
This is a bug in the wayland backend. It fails to apply initial states.
Created attachment 298145 [details] [review] a patch I tried this patch, but it doesn't quite work with mutter - the window gets maximized decorations (no rounded corners), but it doesn't have the right size. Dragging a bit on the titlebar makes it jump to the right size, but things clearly go somewhat wrong here.
Compare bug 710652
the fullscreening part of the patch works ok, though
both maximizing and fullscreening work ok with weston
mutter sends a configure event with width=height=0 and the new state, whereas weston sends the configure event with the new state and the dimensions of the output.
I'll apply the patch and move this back to mutter
Created attachment 299561 [details] [review] wayland: Don't skip notifying about initial maximized size When a client wants to start initialized it my set the maximized state before having attached any buffers. Before we'd not notify the client of the new expected size if the previous size was 0x0 as it would normally mean we'd resize to 1x1, but since this is not always the case, only avoid notifying the client if the previous size was 0x0 and the result is 1x1.
Attachment 299561 [details] pushed as 7b79c44 - wayland: Don't skip notifying about initial maximized size